--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "cypress": "^8.7.0",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
