--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "cypress": "^8.7.0",
+    "cypress-drag-drop": "^1.1.1",
+    "cypress-real-events": "^1.5.1",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
@@ -53,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.0.0"
   }
 }
